Added the sub-pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <!-- Icon Tab -->
-    <link rel="shortcut icon" type="image/png" href="./Photos/icon tab.png">
+    <link rel="shortcut icon" type="image/png" href="./Photos/icon-tab.png">
 </head>
 
 <body>
@@ -67,13 +67,13 @@
     <!-- Start Header -->
     <header id="header">
         <ul>
-            <li><a href="#" class="active">home</a></li>
-            <li><a href="#about">about</a></li>
-            <li><a href="#services">service</a></li>
-            <li><a href="#pricing">price</a></li>
-            <li><a href="#booking">booking</a></li>
-            <li><a href="#blog">pages</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="./index.html" class="active">home</a></li>
+            <li><a href="./about.html">about</a></li>
+            <li><a href="./service.html">service</a></li>
+            <li><a href="./price.html">pricing</a></li>
+            <li><a href="./book.html">booking</a></li>
+            <li><a href="./blog.html">pages</a></li>
+            <li><a href="./contact.html">contact</a></li>
         </ul>
         <button>get quote</button>
         <h1>Safety<span>First</span></h1>
@@ -105,7 +105,7 @@
     </div>
     <!-- End Landing -->
     <!-- Start Booking -->
-    <div class="book" id="booking">
+    <div class="book">
         <div class="re">
             <form action="">
                 <input type="text" name="name" placeholder="Your Name">
@@ -161,7 +161,7 @@
     </div>
     <!-- End Booking -->
     <!-- Start About -->
-    <div class="about" id="about">
+    <div class="about">
         <div class="container">
             <div class="text">
                 <h4>About Us</h4>
@@ -198,7 +198,7 @@
     </div>
     <!-- End About -->
     <!-- Start Services -->
-    <div class="services" id="services">
+    <div class="services">
         <div class="container">
             <div class="title">
                 <h4>Our Services</h4>
@@ -285,7 +285,7 @@
     </div>
     <!-- End Choose -->
     <!-- Start Pricing -->
-    <div class="pricing" id="pricing">
+    <div class="pricing">
         <div class="container">
             <div class="title">
                 <h4>Pricing Plan</h4>
@@ -347,7 +347,7 @@
     </div>
     <!-- End Pricing -->
     <!-- Start Team -->
-    <div class="team" id="team">
+    <div class="team">
         <div class="container">
             <div class="title">
                 <h4>Team Member</h4>
@@ -456,7 +456,7 @@
     </div>
     <!-- End Testimonial -->
     <!-- Start Blog -->
-    <div class="blog" id="blog">
+    <div class="blog">
         <div class="container">
             <div class="title">
                 <h4>Pet Blog</h4>
@@ -521,8 +521,8 @@
         </div>
     </div>
     <!-- End Blog -->
-    <!-- Start Contact -->
-    <div class="contact" id="contact">
+    <!-- Start Info -->
+    <div class="info">
         <div class="main">
             <h1><span>Pet</span> Lover</h1>
             <p>Ipsum amet sed vero et lorem stet eos ut, labore sed sed stet sea est ipsum ut. Volup amet ea sanct
@@ -567,7 +567,7 @@
 
         </div>
     </div>
-    <!-- End Contact -->
+    <!-- End Info -->
     <!-- Start Footer -->
     <footer>
         <p>&#169; <span>Your Site Name</span>All Rights Reserved. Designed by <span>HTML Codex</span></p>
